2007-1-11	fabian

	* Clear screen now leaves the last line (which can wrap to several lines) intact.
	* Fixed a bug of cmd-w closing a terminal tab when preference panel is in the front. (#1618969)
	* Fixed hanging-on-printing bug. (#1630780, #1598353)
	* Added support for CSI[0i, which prints out the screen.
	
2007-1-11	fabian

	* Fixed a bug that causes failure to update screen when there's no scrollback buffer.
	* Fixed a few resizing related bugs.
	* Moved display update timers from PTYSession to PseudoTerminal to reduce CPU usage.
	
2007-1-10	fabian

	* Added a semaphore to coordinate updating. Resizing and dynamic title is now processed in a faster cycle.
	
2007-1-9	fabian

	* save/restore buffer now only save/restore the current screen.
	* removed redundant first_buffer_line from VT100Screen.
	* Added a wrapping flag to indicate hard line break. Selecting&copying now uses this flag.
	* Wrapping now works with resizing.
	
2007-1-6	fabian

	* Improved memory usage for "unlimited" scrollback situation. An upper limit is set to avoid eating up
	  all system memory.

2007-1-3	fabian

	* Added support for xterm's CSI S (SU), CSI T (SD) commands. Nano now works correctly when term type is xterm.
		  
2007-1-2	fabian

	* Fixed initial window size bug (#1623786).
	* Fixed the bottom border, so it no longer overlaps with the resizing triangle.
	* Added support for unlimited scrollback. Set scroll back lines to -1 or any number larger than 1,000,000.
	
2006-12-28	fabian

	* Added an option to enable/disable the border at the bottom of windows.
	
2006-12-21	fabian

	* Moved some scrolling code from VT100Screen to PTYSession to avoid possible crashes.
	* Changed terminal windows to non-deferred to avoid some initializing problem.
	
2006-12-20	fabian

	* Fixed a selection location bug (#1608727).
	* Fixed a scrolling bug (#1619629).
	
2006-12-19	fabian

	* Fixed a bug in VT100Terminal that causes crashes.
	* Fixed a bug that disables dragging of text.
	
2006-12-18	fabian
