@@ -50,7 +50,8 @@ The <STRONG>Bookmarks</STRONG> gives you a bookmark draw. That is just one more 
 is especially useful when you need to look at your bookmarks all the time. The <STRONG>Close</STRONG> button closes
 the front tab, and the window if it is the last tab. And finally, the <STRONG>Execute</STRONG> field lets you
 to type in the command locally before you send it to the terminal. You can also type in a URL. In this case, iTerm
-will launch the URL handler, in some case it is another application.
+will launch the URL handler, in some case it is another application. If you press TAB key instead of Enter after you
+type in the command, a new session will be launched with your command.
 <BR><BR>
 
 <STRONG>Info Panel</STRONG><BR><BR>
@@ -94,7 +95,7 @@ select among open tabs and to move a specific tab to a separate window.
 
 <BR>
 <FONT SIZE="-1">
-Modified: Dec 1st, 2006<BR>Created: Dec 18th, 2002<BR>
+Modified: Jan 12th, 2006<BR>Created: Dec 18th, 2002<BR>
 <A HREF="MAILTO:fabian@macvillage.net">Fabian</A> and <A HREF="MAILTO:ujwal@setlurgroup.com">Ujwal S. Setlur</A><BR>
 Support free software by writing one.<BR>
 </FONT>
